--- a/index.html
+++ b/index.html
@@ -37,37 +37,37 @@
     <h1 class="text-4xl md:text-4xl font-semibold text-center mb-14">Game Hub</h1>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
 
-      <a href="https://dweb.link/ipfs/QmRrTBRPjD8biZ8bnmGvYt2hZGBNF2BpKgusuvhP3ikqhK" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+      <a href="./games/chess game/chess.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
         <h2 class="text-xl font-semibold mb-2">Chess</h2>
         <p class="text-sm">The Original Chess</p>
       </a>
 
-      <a href="https://dweb.link/ipfs/QmfW7ai8QV82HHaioPsga2zZXMHpBq4kVCGkiRK2BuEZKa" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+      <a href="./games/bitbounce/bitbounce1.2.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
         <h2 class="text-xl font-semibold mb-2">Bit Bounce</h2>
         <p class="text-sm">Classic Jumper Game</p>
       </a>
 
-      <a href="https://dweb.link/ipfs/QmNWJAqGtNXaS9eb4Xcxz7j9bFxR18bvkRuHvKm7EbkWFC" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+      <a href="./games/endless shooter/Eshooter.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
         <h2 class="text-xl font-semibold mb-2">Endless Shooter</h2>
         <p class="text-sm">Shoot them all!</p>
       </a>
 
-      <a href="https://dweb.link/ipfs/QmSJUxV33N8mdt15uFxUzLTzR6P9wdwcDNyfjehiw6Q3pr" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+      <a href="./games/save the world/savetheworld.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
         <h2 class="text-xl font-semibold mb-2">Mother Gaia</h2>
         <p class="text-sm">Fish out trash from the sea.</p>
       </a>
 
-      <a href="https://dweb.link/ipfs/QmebrSBMi7K66b7oziot99xXnwRpUDeeDsHJB5ZB4joN2d" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+      <a href="./games/rescue them/rescuethem.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
         <h2 class="text-xl font-semibold mb-2">Rescue Them</h2>
         <p class="text-sm">Save all the pets</p>
       </a>
 
-      <a href="https://dweb.link/ipfs/Qmbqc2Xkfoa14FTfLc2GYn6PVcXjUK5tj8hKNVvQvqWviN" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+      <a href="./games/pixel dodger/pixeldodger.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
         <h2 class="text-xl font-semibold mb-2">Pixel Dodger</h2>
         <p class="text-sm">Dodge the blocks</p>
       </a>
 
-      <a href="https://dweb.link/ipfs/QmZXSVr7MCqr9fXniBuJwcFD8kKVBX45nHVrUDSkttNtj2" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+      <a href="./games/arcadeshooter/Bitshooter.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
         <h2 class="text-xl font-semibold mb-2">Bit Invaders</h2>
         <p class="text-sm">Arcade Shooter</p>
       </a>
