--- a/index.html
+++ b/index.html
@@ -37,24 +37,49 @@
     <h1 class="text-4xl md:text-4xl font-semibold text-center mb-14">Game Hub</h1>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
 
-      <a href="./games/chess game/chess.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+      <a href="./games/Chess/chessV1.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
         <h2 class="text-xl font-semibold mb-2">Chess</h2>
-        <p class="text-sm">The Original Chess</p>
+        <p class="text-sm">Original chess</p>
       </a>
 
-      <a href="./games/bitbounce/bitbounce1.2.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+      <a href="./games/BitBounce/BitBounce.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
         <h2 class="text-xl font-semibold mb-2">Bit Bounce</h2>
-        <p class="text-sm">Classic Jumper Game</p>
+        <p class="text-sm">Classic jumper game</p>
       </a>
 
-      <a href="./games/endless shooter/Eshooter.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
-        <h2 class="text-xl font-semibold mb-2">Endless Shooter</h2>
-        <p class="text-sm">Shoot them all!</p>
+      <a href="./games/BitShooter/BitShooter.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+        <h2 class="text-xl font-semibold mb-2">Bit Shooter</h2>
+        <p class="text-sm">Shoot them all</p>
       </a>
 
-      <a href="./games/save the world/savetheworld.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+      <a href="./games/BitInvaders/BitInvaders.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+        <h2 class="text-xl font-semibold mb-2">Bit Invaders</h2>
+        <p class="text-sm">Arcade shooter</p>
+      </a>
+
+      <a href="./games/BitBurst/BitBurst.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+        <h2 class="text-xl font-semibold mb-2">Bit Burst</h2>
+        <p class="text-sm">Break all the platforms</p>
+      </a>
+
+      <a href="./games/BitDodger/BitDodger.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+        <h2 class="text-xl font-semibold mb-2">Bit Dodger</h2>
+        <p class="text-sm">Dodge the blocks</p>
+      </a>
+
+      <a href="./games/BitRunner/BitRunner.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+        <h2 class="text-xl font-semibold mb-2">Bit Runner</h2>
+        <p class="text-sm">Run and jump</p>
+      </a>
+
+      <a href="./games/BitDigger/BitDigger.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+        <h2 class="text-xl font-semibold mb-2">Bit Digger</h2>
+        <p class="text-sm">Dig the dirt</p>
+      </a>
+
+      <a href="./games/CleanOcean/CleanOcean.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
         <h2 class="text-xl font-semibold mb-2">Mother Gaia</h2>
-        <p class="text-sm">Fish out trash from the sea.</p>
+        <p class="text-sm">Fish out trash from the sea</p>
       </a>
 
       <a href="./games/rescue them/rescuethem.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
@@ -62,19 +87,14 @@
         <p class="text-sm">Save all the pets</p>
       </a>
 
-      <a href="./games/pixel dodger/pixeldodger.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
-        <h2 class="text-xl font-semibold mb-2">Pixel Dodger</h2>
-        <p class="text-sm">Dodge the blocks</p>
+      <a href="./index.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+        <h2 class="text-xl font-semibold mb-2">More</h2>
+        <p class="text-sm">More games coming soon!</p>
       </a>
 
-      <a href="./games/arcadeshooter/Bitshooter.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
-        <h2 class="text-xl font-semibold mb-2">Bit Invaders</h2>
-        <p class="text-sm">Arcade Shooter</p>
-      </a>
-
-      <a href="./games/BitRunner/bitrunner.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
-        <h2 class="text-xl font-semibold mb-2">More!!</h2>
-        <p class="text-sm">Just Wait!!</p>
+      <a href="./index.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+        <h2 class="text-xl font-semibold mb-2">More</h2>
+        <p class="text-sm">More games coming soon!</p>
       </a>
 
       <!-- Add more cards here: Copy the <a> block and update href, title, and description -->
