--- a/games/Chess/chessV1.html
+++ b/games/Chess/chessV1.html
@@ -525,7 +525,7 @@ function connectWebSocket() {
     if (ws && ws.readyState === WebSocket.OPEN) {
       return;
     }
-    ws = new WebSocket('ws://game-hub-fnqa.onrender.com');
+    ws = new WebSocket('wss://game-hub-fnqa.onrender.com');
     ws.onopen = () => {
       console.log('Connected to WebSocket server');
       ws.send(JSON.stringify({ type: 'fetchLobby' })); // <-- change here
