--- a/games/Chess/chessV1.html
+++ b/games/Chess/chessV1.html
@@ -35,7 +35,7 @@
         <button id="localMultiplayerBtn" class="bg-green-500 text-white px-4 py-2 rounded mb-2 w-full hover:bg-green-600">Local Multiplayer</button>
         <button id="onlineMultiplayerBtn" class="bg-purple-500 text-white px-4 py-2 rounded mb-2 w-full hover:bg-purple-600">Online Multiplayer</button>
         <button id="puzzleModeBtn" class="bg-yellow-500 text-white px-4 py-2 rounded mb-2 w-full hover:bg-yellow-600">Puzzle Mode</button>
-        <button id="tournamentBtn" class="bg-red-500 text-white px-4 py-2 rounded w-full hover:bg-red-600">Tournament</button>
+        <button id="tournamentBtn" class="bg-red-500 text-white px-4 py-2 rounded w-full hover:bg-red-600">Tournament (Coming Soon)</button>
       </div>
       <div id="gameInfo" class="bg-white p-4 rounded shadow">
         <h2 class="text-xl font-semibold mb-2">Game Info</h2>
@@ -45,7 +45,7 @@
         <p id="pgn" class="text-sm">PGN: </p>
       </div>
       <div id="tournamentInfo" class="bg-white p-4 rounded shadow hidden">
-        <h2 class="text-xl font-semibold mb-2">Tournament</h2>
+        <h2 class="text-xl font-semibold mb-2">Tournament (Coming Soon)</h2>
         <p id="tournamentStatus">No active tournament</p>
         <button id="createTournamentBtn" class="bg-blue-500 text-white px-4 py-2 rounded mt-2 w-full hover:bg-blue-600">Create Tournament</button>
       </div>
