--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
         <p class="text-sm">Save all the pets</p>
       </a>
 
-      <a href="./index.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
-        <h2 class="text-xl font-semibold mb-2">More</h2>
-        <p class="text-sm">More games coming soon!</p>
+      <a href="./games/ChessPuzzle/ChessPuzzle.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+        <h2 class="text-xl font-semibold mb-2">Chess Puzzle Creator</h2>
+        <p class="text-sm">Make chess puzzles to share</p>
       </a>
 
       <a href="./index.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
