--- a/index.html
+++ b/index.html
@@ -37,9 +37,14 @@
     <h1 class="text-4xl md:text-4xl font-semibold text-center mb-14">Game Hub</h1>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
 
-      <a href="./games/Chess/chessV1.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+      <a href="./games/Chess/Chess.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
         <h2 class="text-xl font-semibold mb-2">Chess</h2>
         <p class="text-sm">Original chess</p>
+      </a>
+
+      <a href="./games/ChessPuzzle/ChessPuzzle.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
+        <h2 class="text-xl font-semibold mb-2">Puzzle Creator</h2>
+        <p class="text-sm">Create Chess Puzzles</p>
       </a>
 
       <a href="./games/BitBounce/BitBounce.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
@@ -85,11 +90,6 @@
       <a href="./games/rescue them/rescuethem.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
         <h2 class="text-xl font-semibold mb-2">Rescue Them</h2>
         <p class="text-sm">Save all the pets</p>
-      </a>
-
-      <a href="./games/ChessPuzzle/ChessPuzzle.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
-        <h2 class="text-xl font-semibold mb-2">Chess Puzzle Creator</h2>
-        <p class="text-sm">Make chess puzzles to share</p>
       </a>
 
       <a href="./index.html" class="game-card bg-white text-gray-800 rounded-lg p-6 text-center shadow-lg">
