--- a/games/Chess/Chess.html
+++ b/games/Chess/Chess.html
@@ -84,9 +84,9 @@
         <button id="tournamentBtn" class="bg-red-500 text-white px-4 py-2 rounded w-full hover:bg-red-600">Tournament (Coming Soon)</button>
         <h2 class="text-xl font-semibold mb-2 mt-4">Piece Theme</h2>
         <select id="pieceThemeSelect" class="mb-2">
-          <option value="unicode" selected>Standard</option>
+          <option value="standard" selected>Standard</option>
           <option value="custom">Origins</option>
-          <option value="standard">Unicode</option>
+          <option value="unicode">Unicode</option>
           <option value="merida">Soon</option>
         </select>
       </div>
